Moved internal CSS to an external CSS file i.e. svg.css

--- a/inline-svg.html
+++ b/inline-svg.html
@@ -3,12 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Inline SVG Example</title>
-		<style>
-			.dog {
-        width: 300px;
-        fill: brown;
-      }
-		</style>
+    <link rel="stylesheet" href="svg.css">
 	</head>
 	<body>
     <?xml version="1.0" encoding="utf-8"?>
